# simple-backend

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2eb0aef46309_initial_migration.py  4e8bc2f56b02_change_table.py  5b4f60c7b43a_initial_migration.py  5fa31c2e5f90_initial_migration.py  6f2b652acbd4_initial_migration.py  9750c8482748_change.py  a0890325785f_initial_migration.py  cd2b214711a0_change.py  d550644dd612_change.py  e2a6e303e734_initial_migration.py  e63e07b2f286_colum_change.py  ee1a1927fc16_sys_migration.py
app/apis/: main.py
app/apis/routes/: article.py  user.py
app/article/: urls.py  validator.py
app/common/: constant.py  global_catch.py  http_exception.py  log_util.py  reponse.py  utils.py
app/logs/: info.log.2024-10-14  info.log.2024-10-15
app/middleware/: __init__.py  black_list.py  cors.py  log_request.py
app/models/: __init__.py  article.py  category.py  log.py  main.py  many_to_many.py  user.py
app/settings/: orm.py
app/test/: add_user.py
app/user/: urls.py  validator.py
article/: urls.py
middleware/: blackList.py  process_time.py
migrations/models/: 0_20240927155328_init.py  0_20241002202151_init.py
models/: main.py
settings/: orm.py
user/: models.py  urls.py  validator.py
