[tool.poetry]
name = "simple-backend"
version = "0.1.0"
description = ""
authors = ["ylm <1044190862@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
tortoise-orm = "^0.21.6"
tortoise = "^0.1.1"
python-multipart = "^0.0.12"
uvicorn = "^0.31.0"
aiomysql = "^0.2.0"
aerich = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
